@@ -27,4 +27,6 @@ if [istarget frv*-*-*] {
     run_list_test "fr450-insn" "-mcpu=fr400"
     run_list_test "fr450-insn" "-mcpu=fr500"
     run_list_test "fr450-media-issue" "-mcpu=fr450"
+
+    run_dump_test "fr550-pack1"
 }
