@@ -1,0 +1,4 @@
+	cfmovs.p	fr0,fr4,cc0,0
+	cfmovs.p	fr1,fr5,cc0,0
+	cfmovs.p	fr2,fr6,cc0,0
+	cfmovs		fr3,fr7,cc0,0
